--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -5,6 +5,8 @@ html, body, #root {
     color: #FFFFFF;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
+    width: 100%;
+    height: 100%;
     min-width: 100%;
     min-height: 100%;
     margin: 0;
